@@ -1,14 +1,8 @@
-AUX tpserver-cpp.confd 47 RMD160 04f48fe7d448e19bc0ef5f9c5013831c118e7764 SHA1 ba28d47524d72030084dc7dc109db958b3e802cc SHA256 1060f09307bdec9e4fcd257e383254ac1fa04dd444f18fe6438137838efd7b78
-AUX tpserver-cpp.initd 1143 RMD160 e3e0434e50741ddf9d16bc5c1c254b6d6df11f4c SHA1 2e7c7970a324fe3dabc46b57a7a420ba77bbbdee SHA256 b8311cb5e9eddd166f14b7348112e34c9445a8653bab5ae918bb2ba8bd5c53eb
-AUX tpserver.conf 1001 RMD160 faf1d5eb7eaa83e5a30e7b4d50165149588ef35a SHA1 4b41e33d791811a8624fad8ee812ec6f0c107e8d SHA256 3675a1ee1cf4ae467b521d71653d75f179b7f5536590df34d01d223099aa3361
-DIST tpserver-cpp-0.5.1.tar.gz 910924 RMD160 199f2aba0089383ca86dc0f5f5a9034cd565c012 SHA1 bff34c02d8ef685a06d906a792655ce182bc5a24 SHA256 5542a7445a2f8cb7bc0fd37c3c664fb5f93aadabdf1befbdc81d3df2b3f54ff4
-DIST tpserver-cpp-0.6.0.tar.gz 1022099 RMD160 ddd722b9435b22c695c75b20e522152ce8be087f SHA1 3b3db172fb2e51580f7722fc06a8bb2117a5a5e0 SHA256 32ced68d0e447f12729c7580f8a198f5692882fecdc021c9b6dd685a99fe9414
-DIST tpserver-cpp-0.6.1.tar.gz 1038764 RMD160 1a14dce76e0acd57a26ddadf56a536aebc9a8450 SHA1 5e91bdc608e7af76e7475365111f7b4fb1edb5d1 SHA256 6e762fbae9b4baaccda2b840f778ce7235db25409d1a1d419ce5c8ae71da5b45
-DIST tpserver-cpp-0.6.2.tar.gz 1060478 RMD160 366e1f308c9d358623d54426048fcf1deceb8580 SHA1 ebb5008d1532de480f2d466702e76a453ac05a49 SHA256 7790749f1a31e4ded708cc02833a672d6586bc79bf6d4bb4146e7459357c9172
-EBUILD tpserver-cpp-0.5.1.ebuild 1099 RMD160 b246c07348859143752ef782f7c727bc1e46198f SHA1 9b4f504fe693977bf2c39d2804f4502e03afcbae SHA256 d1465de02f3e91f7fea210fcc89ed34569419082f0d8ee817fe77874c4ab073d
-EBUILD tpserver-cpp-0.6.0.ebuild 1275 RMD160 0d6df5a362c629c90fd5537ef7a5ca6ad9c79ede SHA1 30fc82c28820f06b553ab54e6a63af14448521e6 SHA256 68fd9a95460a1cb523fd0a735fc469575bd3751c7cefcc868f8c6112b4ba3d50
-EBUILD tpserver-cpp-0.6.1.ebuild 1275 RMD160 0d6df5a362c629c90fd5537ef7a5ca6ad9c79ede SHA1 30fc82c28820f06b553ab54e6a63af14448521e6 SHA256 68fd9a95460a1cb523fd0a735fc469575bd3751c7cefcc868f8c6112b4ba3d50
-EBUILD tpserver-cpp-0.6.2.ebuild 1275 RMD160 0d6df5a362c629c90fd5537ef7a5ca6ad9c79ede SHA1 30fc82c28820f06b553ab54e6a63af14448521e6 SHA256 68fd9a95460a1cb523fd0a735fc469575bd3751c7cefcc868f8c6112b4ba3d50
-EBUILD tpserver-cpp-9999.ebuild 1318 RMD160 959b51c1c75d47a2e70a28efa2c6558650292a9d SHA1 c1b1fffac6603de09dd4f3ba277a582559d1cfc1 SHA256 5fb5db70fbbec62422a64e806b9743cb6ba926ff025cbff394818214fdd76fe2
-MISC ChangeLog 1489 RMD160 48d72ee028c08f6ab8e57a1acfe118eb8504a096 SHA1 425e34f51b56650c93c707c820aac6ca4ec64381 SHA256 abb0a493d5b9a7b37af22d40732bd6028a3653baf9e8d56920b45c50bdc6b3a2
-MISC metadata.xml 332 RMD160 28be196bd790f6bcfcecc629fbf4ce97b3364a24 SHA1 dfca2d8c53772720037e0f1cc64f0e9867cfcc0a SHA256 0ada152869a9d95832438d11fd527b8e2016092b0908721da628ee2d99841357
+AUX tpserver-cpp.confd 47 SHA256 1060f09307bdec9e4fcd257e383254ac1fa04dd444f18fe6438137838efd7b78 SHA512 e57b5910c6308aed7a5ad56a95a0b909fda53b5cfcf546f6dd1698ee584eebd6393401bf551b6d8e2fcdbb28e14f15758e33b31ad78456c48ba6929f77c917a8 WHIRLPOOL 80930b6de7b5eaaac3002dadc1c4a7d63ebc028b8defd529fb140bd0e7f1d59a43b69a52bc4f490a94d7838c7e4d2026391d3a141d4d8dfa61b8550e330ec5c0
+AUX tpserver-cpp.initd 1143 SHA256 b8311cb5e9eddd166f14b7348112e34c9445a8653bab5ae918bb2ba8bd5c53eb SHA512 608e9cb386dcdba760a3f05e56c777a2594a990f78a09eaeb4cf351485983cf91fadb56ddc76c7b4f04e40eab26633b3b6f92270d509fbabbf2ede944a147c4c WHIRLPOOL 3e837ed47b8a3510f1c952bff13aad2ca6cea324b3bce7e329381c253dc6ca97c15c1f5dad4ae87b42b75086f73444de6ece5246d70ad2f62ccce5a48f3ded6e
+AUX tpserver.conf 1001 SHA256 3675a1ee1cf4ae467b521d71653d75f179b7f5536590df34d01d223099aa3361 SHA512 fdd7907fa423787ad4c0b4de4085cf1f06c63e04e83c6872c66b093e9b4c59392758d9dfe756c519168c27c9b3492536a16a0c04846ced1d592abb809956ac73 WHIRLPOOL 27dd8564bedcb055b99896c2bf4e26d8f11e7fa3e1526f5c97b20af3a87624406a9fd60564dd275dfc911ea704cd44211cf8fca93f9080e66a99b38bd6fbe343
+DIST tpserver-cpp-0.6.2.tar.gz 1060478 SHA256 7790749f1a31e4ded708cc02833a672d6586bc79bf6d4bb4146e7459357c9172
+EBUILD tpserver-cpp-0.6.2.ebuild 1283 SHA256 d3d4acace4157236ffcf8d070b37214cb9f031c80fcc130fd38b2fb279536df5 SHA512 b985efb31bad8272629a9461886ebf64376625f2ecfa0fbbdbb2329fca65fa4fe2c5ab8bd3f490249ae63befdfe189f505d61660a9c32d83c03aed8462c6fac2 WHIRLPOOL c81787f4cb33645a3e1451f4a6f91709503f71aed69f85b9d88ba4f953865bfaf1f91b7d2aa581feed00b53509c4c1ddcb54be6392a1e4447c6167708ea0d02d
+EBUILD tpserver-cpp-9999.ebuild 1327 SHA256 10862709f0f9cc0f46333b03239add1f308436fac292f8c790326e1d4dbde453 SHA512 3e4ce6b8c1dba219f88ee45b10fa2d1a117eb8b914febcb54295bcd38c5bdc81c3e0f5dff93489e59edb8e1d7c94b08792eff5141ebd69769707041c5f6b45ec WHIRLPOOL 1542f23a0b0a786150ed30147262635bcc4ddb737c8534ee55f3034df420ea89badc1423f83b46df3b5900c322e4054018e304e0fb459322edf26fdb3ad110ad
+MISC ChangeLog 1792 SHA256 3ee2435eeef61d7efb64f1f89d1cacba1a10e1bdb71f9a90b81ced66438a5830 SHA512 8f31ce8d63f005a13491a19df8a169e739fef82d965d49d5eebd23710fc6cb2375ae889d22591f160da7b553e082c35c9501a515c1f7a875a52d1919b64b4028 WHIRLPOOL 8522c74465e9d8b8ca550d7fbb71cf22818e2d39f5e863e853574699e4405f49efff7d318178a82f5f0333902d6d8a2d7ec8cc689086f1e5eda32f1147eb5f97
+MISC metadata.xml 332 SHA256 0ada152869a9d95832438d11fd527b8e2016092b0908721da628ee2d99841357 SHA512 cd65b95fb47cac3c4ad34bb0d5b3576ebb0f43c61260b5a237521169588ddf8d60181d68c55df10e328cc6b39db85939a53a02b179430d6efcf2be47c4207ea7 WHIRLPOOL 8e672edaff4cbb96ecf1578b5a6fcb5f82108424edec9e86c02f32e5e09c36fdb89f90fd62e0217dcd7482eaa4623eae92fb995ed50b2934095a0b957b422519
