@@ -1,6 +1,12 @@
 # ChangeLog for games-server/tpserver-cpp
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Jan 2013; Jure Repinc <jlp@holodeck1.com> -tpserver-cpp-0.5.1.ebuild,
+  -tpserver-cpp-0.6.0.ebuild, -tpserver-cpp-0.6.1.ebuild,
+  tpserver-cpp-0.6.2.ebuild, tpserver-cpp-9999.ebuild:
+  Added EAPI=1 to make IUSE containing defaults work, removed old versions,
+  changed mysql dependancy to virtual
 
 *tpserver-cpp-0.6.2 (31 Mar 2009)
 
